fix: prevent strange layout issue on mobile Safari when having only one search result.

--- a/packages/map-template/src/components/Search/Search.scss
+++ b/packages/map-template/src/components/Search/Search.scss
@@ -27,6 +27,10 @@
         overflow: auto;
         flex: 1 1 auto;
         margin-top: var(--spacing-x-small);
+
+        > * {
+            height: fit-content; /* fixing issue on mobile Safari causing them to bee too large in case of just one search result */
+        }
     }
 
     &__scroll-buttons {
